# compiler-project

./: README.md  pyproject.toml
compiler/: CFG2IR.py  CodeGen.py  Compiler.py  ControlFlow.py  GraphView.py  Interpreter.py  Optimizer.py  While2IR.py  While3Addr.py  util.py
compiler/grammar/: .gitignore  Makefile  While.g4
runtime/: io.c
tests/: and.cfg  and.ir  and.while  constant_prop.cfg  constant_prop.ir  constant_prop.while  eq.cfg  eq.ir  eq.while  example_5-2.ir  example_5-3.ir  fact.cfg  fact.ir  fact.opt.cfg  ge.cfg  ge.ir  ge.while  gt.cfg  gt.ir  gt.while  le.cfg  le.ir  le.while  lt.cfg  lt.ir  lt.while  not.cfg  not.ir  or.cfg  or.ir  or.while  strength.cfg  strength.ir  strength.while  test.cfg  test.ir  test.while  while.cfg  while.ir  while.while
